<resources>
    <string name="app_name">Unit Convert</string>
    <string name="Temperature">Temperature</string>
    <string name="Weight_Volume">Weight/Volume</string>
    <string name="Distance">Distance</string>
    <string name="ChooseUnitQuery">Choose the unit you\'d like to convert</string>
    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="Kelvin">Kelvin</string>
    <string name="ChooseTypeOfUnit">Select the type of converson to continue</string>
    <string name="CelsiusConversionQuery">Choose the unit to convert Celsius degrees to</string>
    <string name="insertNumberConvert" />
    <string name="insertNumberConversion">Input the number you\'d like to convert</string>
    <string name="invalidInput">Input a valid number</string>
    <string name="FahrenheitConversionQuery">Choose the unit to convert Fahrenheit degrees to</string>
    <string name="KelvinConversionQuery">Choose the unit to convert Kelvin degrees to</string>
    <string name="AnswerWillAppearHere">The answer will appear here</string>
    <string name="Kilogram">kilograms</string>
    <string name="Pound">pounds</string>
    <string name="Litre">litres</string>
    <string name="Gallon">gallons</string>
    <string name="PressButton">Press the button to convert</string>
    <string name="Kilometer">Kilometers</string>
    <string name="NauticalMile">Nautical Miles</string>
    <string name="Mile">Miles</string>
</resources>