<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CelsiusConversion">

    <Button
        android:id="@+id/poundToKilogramsConvertButton"
        android:layout_width="358dp"
        android:layout_height="90dp"
        android:text="@string/Kilogram"
        app:layout_constraintBottom_toTopOf="@+id/answerField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressButtonToConvert" />

    <TextView
        android:id="@+id/pressButtonToConvert"
        android:layout_width="156dp"
        android:layout_height="53dp"
        android:autofillHints="none"
        android:text="@string/PressButton"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#4C5DB8"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/poundToKilogramsConvertButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberToConvert" />

    <EditText
        android:id="@+id/numberToConvert"
        android:layout_width="316dp"
        android:layout_height="47dp"
        android:autofillHints="none"
        android:ems="10"
        android:hint="@string/insertNumberConversion"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/pressButtonToConvert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/answerField"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:autofillHints="none"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/AnswerWillAppearHere"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poundToKilogramsConvertButton" />
</androidx.constraintlayout.widget.ConstraintLayout>