<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CelsiusConversion">

    <Button
        android:id="@+id/kelvinToFahrenheitConvButton"
        android:layout_width="156dp"
        android:layout_height="100dp"
        android:text="@string/Fahrenheit"
        app:layout_constraintBottom_toTopOf="@+id/answerField"
        app:layout_constraintEnd_toStartOf="@+id/kelvinToCelConvButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseUnitConvCel" />

    <Button
        android:id="@+id/kelvinToCelConvButton"
        android:layout_width="156dp"
        android:layout_height="100dp"
        android:text="@string/Celsius"
        app:layout_constraintBottom_toTopOf="@+id/answerField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/kelvinToFahrenheitConvButton"
        app:layout_constraintTop_toBottomOf="@+id/chooseUnitConvCel" />

    <TextView
        android:id="@+id/chooseUnitConvCel"
        android:layout_width="156dp"
        android:layout_height="53dp"
        android:text="@string/KelvinConversionQuery"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#4C5DB8"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/answerField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberToConvert"
        app:layout_constraintVertical_bias="0.201" />

    <EditText
        android:id="@+id/numberToConvert"
        android:layout_width="316dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/insertNumberConversion"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/answerField"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:ems="10"
        android:enabled="true"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>