<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/chooseUnitTemp"
        android:layout_width="156dp"
        android:layout_height="53dp"
        android:text="@string/ChooseTypeOfUnit"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#4C5DB8"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/temperatureButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/temperatureButton"
        android:layout_width="156dp"
        android:layout_height="100dp"
        android:text="@string/Temperature"
        app:layout_constraintBottom_toTopOf="@+id/weightButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/weightButton"
        android:layout_width="153dp"
        android:layout_height="100dp"
        android:text="@string/Weight"
        app:layout_constraintBottom_toTopOf="@+id/distanceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureButton" />

    <Button
        android:id="@+id/distanceButton"
        android:layout_width="153dp"
        android:layout_height="100dp"
        android:text="@string/Distance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightButton" />
</androidx.constraintlayout.widget.ConstraintLayout>